--- a/build
+++ b/build
@@ -4,9 +4,9 @@ set -eo pipefail
 shopt -s globstar
 
 SITE_URL="https://jamison.lahman.dev"
-OUTPUT_DIR="output"
-POSTS_DIR="posts"
+BLOG_DIR="blog"
 
+# Compile HTML
 for md in **/*.md; do
   if [ $md == "README.md" ]; then
     continue
@@ -26,17 +26,13 @@ pandoc \
   --metadata=title-prefix=Feed \
   --metadata=nav_feed=true
 
+# Minify CSS
 docker run --rm -i node:alpine \
   sh -c "npm install -g clean-css-cli > /dev/null && cleancss -o /dev/stdout" \
   < css/stylesheet.css > css/stylesheet.min.css
 
-# TODO
-exit
-
-mkdir -p "$OUTPUT_DIR/posts"
-
 # Start RSS feed
-RSS_PATH="$OUTPUT_DIR/rss.xml"
+RSS_PATH="rss.xml"
 echo '<?xml version="1.0"?>' > "$RSS_PATH"
 echo '<rss version="2.0"><channel>' >> "$RSS_PATH"
 echo "  <title>jmelahman's blog</title>" >> "$RSS_PATH"
@@ -46,23 +42,22 @@ echo "  <language>en-us</language>" >> "$RSS_PATH"
 echo "  <lastBuildDate>$(date -R)</lastBuildDate>" >> "$RSS_PATH"
 
 # Process each post
-for md in "$POSTS_DIR"/*.md; do
+for md in "$BLOG_DIR"/*.md; do
     filename=$(basename "$md" .md)
-    html_out="$OUTPUT_DIR/posts/$filename.html"
+    if [ "$filename" == "index.md" ]; then
+      continue
+    fi
 
     # Extract metadata
-    title=$(sed -n 's/^title:[ ]*//p' "$md")
+    title=$(sed -n 's/^#\s[ ]*//p' "$md")
     date=$(sed -n 's/^date:[ ]*//p' "$md")
     pubDate=$(date -R -d "$date")
-
-    # Convert to HTML
-    pandoc "$md" -o "$html_out" --template=template.html --metadata title="$title"
 
     # Append to RSS
     echo "  <item>" >> "$RSS_PATH"
     echo "    <title>$title</title>" >> "$RSS_PATH"
-    echo "    <link>$SITE_URL/posts/$filename.html</link>" >> "$RSS_PATH"
-    echo "    <guid>$SITE_URL/posts/$filename.html</guid>" >> "$RSS_PATH"
+    echo "    <link>$SITE_URL/$BLOG_DIR/$filename.html</link>" >> "$RSS_PATH"
+    echo "    <guid>$SITE_URL/$BLOG_DIR/$filename.html</guid>" >> "$RSS_PATH"
     echo "    <pubDate>$pubDate</pubDate>" >> "$RSS_PATH"
     echo "  </item>" >> "$RSS_PATH"
 done
