--- a/resume/build
+++ b/resume/build
@@ -18,3 +18,9 @@ docker run \
 	--variable skip-header=true \
 	--variable root-prefix=/mnt
 uvx weasyprint "${DIR}/pdf.html" "${DIR}/resume.pdf"
+docker run \
+  --rm \
+  -v "${DIR}":/mnt \
+  -w /mnt \
+  minidocks/poppler \
+  pdftoppm -singlefile -png resume.pdf preview
